# roboco

./: .env.example  .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  index.html  inspect_autogen.py  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.md  roboco.db  run_example.sh  setup.bat  setup.py  setup.sh  setup_uv.bat  setup_uv.sh  setup_workspace.bat  setup_workspace.sh  sitemap.xml  start.sh  team.yaml  test_api_keys.py  test_architecture.py
.cursor/rules/: agentx.mdc  roboco.mdc
.github/workflows/: auto-release.yml  deploy.yml  gh-pages.yml  pypi.yaml
agentx_workspace/41a5a580-6c3b-434c-a087-cc00f1ad2304/: task_state.json
agentx_workspace/5b0e7b3e-29b5-4f34-a135-05e24d23f9b2/: task_state.json
agentx_workspace/7a811e10-7db0-47bc-a75e-07aea453ade6/: task_state.json
agentx_workspace/863b59dc-96aa-44e0-a640-8db1745006b8/: task_state.json
agentx_workspace/b2e95ec4-ee38-4d59-aa6b-753d3b387525/: task_state.json
agentx_workspace/bc69f683-c8e6-46cc-aff6-6fba431131cb/: task_state.json
agentx_workspace/ccc05349-6303-40be-b635-98790ef42ca0/: task_state.json
agentx_workspace/d177be60-6750-4adf-9c66-818da1187a63/: task_state.json
agentx_workspace/f2e435ab-d046-48a0-86e6-c135b5405eb3/: task_state.json
api/: index.html
arch/00-requirements/: index.html
arch/01-architecture/: index.html
arch/02-state-and-context/: index.html
arch/03-tool-call/: index.html
arch/04-communication/: index.html
benchmark/: .gitignore  README.md  main.py
config/: agentx.yaml  config.example.toml  config.yaml  roles.yaml  settings.py  team.yaml  teams.yaml
config/prompts/: README.md  architect.md  backend_developer.md  content_writer.md  creator.md  data_analyst.md  developer.md  evaluator.md  executive.md  executor.md  explorer.md  frontend_developer.md  human_proxy.md  integrator.md  lead.md  planner.md  product_manager.md  report_writer.md  research_lead.md  researcher.md  software_engineer.md  strategist.md  synthesizer.md  ui_designer.md  writer.md
config/roles/: project_agent.md
config/teams/: planning.yaml  project_team.yaml
docs/: .gitignore  00-requirements.md  01-architecture.md  02-collaboration-model.md  02-state-and-context.md  03-data-and-events.md  04-communication.md  04-storage-architecture.md  05-tool-execution-architecture.md  README.md  agent.md  api.md  collaboration-with-tools.md  config-based-design.md  config-driven-architecture.md  config_based_design.md  configuration.md  configuration_based_teams.md  context-management.md  data-and-memory.md  deepseek-optimization.md  domain_driven_design.md  event-system.md  improvement_roadmap.md  index.md  mcp.md  mcp_agents.md  memory-system.md  next.config.js  next.config.ts  object_model.md  observability.md  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.mjs  projects.md  quickstart.md  system-architecture.md  team_config.md  (+9 more)
docs/api/: index.md
docs/app/: globals.css  layout.tsx  page.tsx
docs/arch/: 03-tool-call.md
docs/content/: _meta.js  index.mdx
docs/pages/: _meta.json  get-started.mdx  index.mdx
docs/partials/: home.html
examples/: README.md  __init__.py  app_example.py  event_system_demo.py  memory_backend_demo.py  test_ag2_simple.py  web_surf.py
examples/agent/: custom_agent_with_config.py
examples/agents/: custom_team.py  project_agent_example.py  test_team_builder.py
examples/api/: chat_example.py  client_example.py  dynamic_project_example.py  project_example.py
examples/genesis/: genesis_agent_example.py
examples/market_research/: main.py  team.py
examples/mcp/: genesis.py  genesis_chat.py
examples/multi_agent_workflow/: research_to_implementation.py
examples/phase/: planning.py
examples/research_tools/: github_example.py
examples/robotics_research/: research_example.py
examples/scenarios/: writing_a_blog_post.py
examples/services/: chat_example.py  roboco.db  task_example.py
examples/simple-research-team/: researcher_prompt.md  team.json
examples/simple_chat/: README.md  main.py  run_chat.py  team.yaml
examples/simple_team/: .gitignore  README.md  demo.py  main.py  test_streaming.py
examples/step_through_demo/: README.md  main.py
examples/super_writer/: README.md  (+2 more)
notebooks/: 01_basic_team_setup.ipynb  02_tools_and_agents.ipynb  empty_message_in_swarm.ipynb
prompts/: reviewer.md
quickstart/: index.html
reports/: research_report_0.md
roboco/: .env.example  .gitignore  README.md  cli.py  configure.py  pyproject.toml
roboco/agents/: studio_config.py
roboco/agents/core/: agent.py  orchestrator.py
roboco/agents/roles/: ceo.py  software_engineer.py
roboco/config/: config.example.toml  default.yaml
roboco/docs/: swarm_integration.md
roboco/docs/design/: arch.md
roboco/examples/: basic_usage.py  config_example.py  test_vision.py
roboco/examples/market_research/: config.toml  main.py  team.py
roboco/notebooks/: ag2_research.ipynb  agent_research.ipynb
roboco/src/roboco/: __init__.py  cli.py  config.py  service.py
roboco/src/roboco/agents/: __init__.py  base.py  executive.py  manager.py  product_manager.py  report_writer.py  researcher.py  team.py  tool_user.py  user_proxy.py
roboco/src/roboco/agents/roles/: __init__.py  executive.py  human.py  product.py  product_manager.py  user_proxy.py
roboco/src/roboco/api/: __init__.py  app.py
roboco/src/roboco/api/models/: messages.py
roboco/src/roboco/api/routes/: agents.py
roboco/src/roboco/cli/: __init__.py  main.py  verify_tools.py
roboco/src/roboco/cli/commands/: serve.py  validate.py
roboco/src/roboco/core/: __init__.py  ag2_integration.py  agent.py  config.py  logging.py  team.py  tool.py  tool_factory.py  types.py
roboco/src/roboco/tools/: base.py  bash.py  browser.py  embodied_tools.py  run.py  tool_factory.py  web_search.py
scripts/: preview-docs.sh  standardize_loggers.py  test_api_keys.py
search/: search_index.json
studio/: package.json  pnpm-lock.yaml
tests/: README.md  __init__.py  config.yaml  conftest.py  roboco.db  run_tests.py  test_example.py
(+524 files in other folders)
