[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roboco"
version = "0.4.0"
description = "RoboCo - A Multi-agents Platform"
authors = [
    {name = "Dustland Team", email = "hi@dustland.ai"}
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.7.1",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.3",
    "pyyaml>=6.0.1",
    "rich>=13.6.0",
    "loguru",
    "tavily-python",
    "PyGithub", # GitHub API client
    "arxiv", # ArXiv API client
    "autogen",
    "mcp>=1.4.1",
    "markdown>=3.4.0", # For markdown processing
    "sqlmodel>=0.0.8", # SQL ORM
    "sqlalchemy>=2.0.0", # SQL toolkit
    "requests>=2.31.0", # HTTP library
    "beautifulsoup4>=4.12.0", # For HTML parsing
    "streamlit>=1.44.1",
    "pyarrow>=19.0.1",
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "isort",
    "pytest",
    "pytest-cov",
    "flake8",
]
ui = [
    "streamlit>=1.32.0",
]
all = [
    "streamlit>=1.32.0",
]

[project.urls]
"Homepage" = "https://github.com/dustland/roboco"
"Bug Tracker" = "https://github.com/dustland/roboco/issues"

[project.scripts]
roboco = "roboco.cli:cli"
roboco-api = "roboco.api.server:run_api_server"
roboco-api-dev = "roboco.api.server:run_dev_server"
roboco-ui = "roboco.cli.ui:launch_ui"

[tool.setuptools]
package-dir = {"" = "src"}
package-data = {"roboco" = ["py.typed"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "setuptools.*",
    "google.*",
    "langchain.*",
    "transformers.*",
    "bs4.*",
    "requests.*",
    "feedparser.*",
    "numpy.*",
    "PIL.*",
    "openai.*",
    "qdrant_client.*",
    "uvicorn.*",
    "fastapi.*",
    "markdown.*",
    "rich.*",
    "pymongo.*",
    "github.*",
    "arxiv.*",
]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/roboco"]

[tool.hatch.build.targets.sdist]
include = [
    "src/roboco",
    "config",
    "examples",
    "tests",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
