[tool.poetry]
name = "roboco"
version = "0.1.0"
description = "RoboCo - Multi-Agent System for Humanoid Robot Development"
authors = ["Hugh Lyu <hugh.lv@gmail.com>"]
readme = "README.md"
packages = [{include = "roboco", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
pydantic = "^2.10.6"
python-dotenv = "^1.0.1"
loguru = "^0.7.3"
pyautogen = "^0.7.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "roboco.api.app:start"
dev = "roboco.api.app:start"
